--- a/react-app-2/public/index.html
+++ b/react-app-2/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>react-mf-2</title>
+    <title>react-app-2</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
